finished auth & started stats

--- a/web/index.html
+++ b/web/index.html
@@ -27,6 +27,10 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png">
 
+  <!-- cropperjs -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.6.2/cropper.css" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.6.2/cropper.min.js"></script>
+
   <title>e_learning_app_gp</title>
   <link rel="manifest" href="manifest.json">
   
